Agregar favicon y actualizar README

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="D.G. Paola Fraticola">
     <meta name="robots" content="index, follow">
     <title>Peditutupper, sólo a un click de distancia </title>
+    <link rel="icon" href="img/logo-peditutupper.png" type="image/png+xml">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
