--- a/form.html
+++ b/form.html
@@ -10,6 +10,8 @@
     <meta name="robots" content="index, follow">
     <title>Peditutupper, sólo a un click de distancia </title>
 
+    <link rel="icon" href="img/logo-peditutupper.png" type="image/png+xml">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-..." crossorigin="anonymous">
