--- a/form.html
+++ b/form.html
@@ -5,21 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenido a PEDITUTUPPER donde ofrecemos productos y servicios de alta calidad.">
-    <meta name="keywords" content="productos, servicios, calidad, empresa, tupperware, botellas, portaviandas, taper, cacerolas, taperuere">
+    <meta name="keywords"
+        content="productos, servicios, calidad, empresa, tupperware, botellas, portaviandas, taper, cacerolas, taperuere">
     <meta name="author" content="D.G. Paola Fraticola">
     <meta name="robots" content="index, follow">
     <title>Peditutupper, sólo a un click de distancia </title>
 
     <link rel="icon" href="img/logo-peditutupper.png" type="image/png+xml">
 
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-..." crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 
 <body>
     <header>
@@ -38,11 +43,26 @@
                         <li class="nav-item"><a class="nav-link" href="index.html#productos">Productos</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#resenas">Reseñas</a></li>
                         <li class="nav-item"><a class="nav-link" href="form.html">Contacto</a></li>
+                        <div class="toggle-container">
+                            <input type="checkbox" id="mode-toggle" />
+                            <label for="mode-toggle" class="toggle-label">
+                                <span class="toggle-icon sun">☀️</span>
+                                <span class="toggle-icon moon">🌙</span>
+                            </label>
+                        </div>
                     </ul>
-                    <form class="d-flex ms-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                        <button class="btn btn-outline-light" type="submit">Buscar</button>
-                    </form>
+                    <!-- <div class="form-and-toggle d-flex align-items-center ms-3">
+                        <form class="d-flex me-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                            <button class="btn btn-outline-light" type="submit">Buscar</button>
+                        </form> -->
+                        <!-- Ícono de carrito con el contador -->
+                        <!-- <button id="cart-button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#cartModal">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span id="cart-counter" class="badge bg-danger">0</span> 
+                        </button>
+                    </div> -->
                 </div>
             </div>
         </nav>
@@ -79,22 +99,13 @@
             </form>
         </div>
     </section>
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <span>Talento Tech - JS - C24225</span>
 
-                <div class="social-icons">
-                    <a href="https://www.instagram.com/peditutupper" target="_blank"><i
-                            class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/peditutupper" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.tiktok.com/@peditutupper" target="_blank"><i class="fab fa-tiktok"></i></a>
-                    <!-- <a href="https://www.youtube.com/c/peditutupper" target="_blank"><i class="fab fa-youtube"></i></a>-->
-                </div>
-                <span> <a class="nav-link" href="mailto:paofraticola@gmail.com">Diseñado por DG PaoFraticola</a></span>
-            </div>
-        </div>
-    </footer>
+       
+    <div id="footer"></div>
+
+    <script src="js/script.js"></script>
+    <script src="js/productos.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
