--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         integrity="sha384-..." crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -40,13 +42,6 @@
                         <li class="nav-item"><a class="nav-link" href="index.html#productos">Productos</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#resenas">Reseñas</a></li>
                         <li class="nav-item"><a class="nav-link" href="form.html">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#carrito"></a><i class="fas fa-shopping-cart"></i></li>
-                    </ul>
-                    <div class="form-and-toggle d-flex align-items-center ms-3">
-                        <form class="d-flex me-3" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                            <button class="btn btn-outline-light" type="submit">Buscar</button>
-                        </form>
                         <div class="toggle-container">
                             <input type="checkbox" id="mode-toggle" />
                             <label for="mode-toggle" class="toggle-label">
@@ -54,8 +49,19 @@
                                 <span class="toggle-icon moon">🌙</span>
                             </label>
                         </div>
+                    </ul>
+                    <div class="form-and-toggle d-flex align-items-center ms-3">
+                        <form class="d-flex me-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                            <button class="btn btn-outline-light" type="submit">Buscar</button>
+                        </form>
+                        <!-- Ícono de carrito con el contador -->
+                        <button id="cart-button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#cartModal">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span id="cart-counter" class="badge bg-danger">0</span> <!-- Aquí va el contador -->
+                        </button>
                     </div>
-
                 </div>
             </div>
         </nav>
@@ -119,22 +125,56 @@
         </section>
     </main>
 
-    <section id="productos" class="productos container my-5">
+    <div id="productos" class="productos container my-5">
         <h1>Peditutupper, todo Tupperware para vos.</h1>
 
         <h3>Buscá por categoría:</h3>
-        <div class="categorias-container mb-4">
-            <div class="categoria-card">Beber</div>
-            <div class="categoria-card">Almacenar</div>
-            <div class="categoria-card">Heladera</div>
-            <div class="categoria-card">Freezer</div>
-            <div class="categoria-card">Transportar</div>
-            <div class="categoria-card">Cocinar</div>
+        <div class="container my-5">
+
+    
+                <!-- Botonera Horizontal para Filtrar por Categoría -->
+                <div class="btn-group d-flex flex-wrap justify-content-between mb-4" role="group" id="filtro-categoria">
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="all">Todas</button>
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="Beber">Beber</button>
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="Almacenar">Almacenar</button>
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="Transportar">Transportar</button>
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="Cocinar">Cocinar</button>
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="Heladera">Heladera</button>
+                    <button type="button" class="btn btn-secondary mb-2 mb-sm-0 flex-fill" data-categoria="Freezer">Freezer</button>
+                </div>
+            </div>
+
+            <div class="container mt-4">
+                <h1 class="mb-4">Nuestros Productos</h1>
+                <div class="row productos-container d-flex justify-content-center"></div> 
+            </div>
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cartModalLabel">Carrito de Compras</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul id="cart-items" class="list-group">
+                            <!-- Aquí van los productos del carrito -->
+                        </ul>
+                        <p id="cart-empty-message" style="display:none;">No tienes seleccionado ningún producto.</p>
+                        <hr>
+                        <p>Total: $<span id="cart-total">0</span></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button id="botonPagar" class="btn btn-success" style="display: none;">Pagar</button>
+
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <h3>Ofertas:</h3>
-
-        <div class="row productos-container"></div>
-
 
         <!-- Valoraciones y reseñas de usuarios -->
         <section id="resenas" class="reseñas container my-5">
@@ -173,7 +213,9 @@
         <div id="footer"></div>
 
         <script src="js/script.js"></script>
-        <script src="js/productos.js"></script>
+        <script src="js/carrito.js"></script> <!-- Lógica del carrito -->
+        <script src="js/productos.js"></script> <!-- Lógica de productos (si es necesario) -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
