--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/tupper-carro01.jpg" class="d-block w-100" alt="...">
+                        <img src="img/tupper-carro01.jpg" class="d-block w-100" alt="Portaviandas y botellas de diferentes tamaños y colores">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="carousel-caption-content">
                                 <h5>Porta Viandas</h5>
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/tupper-carro02.jpg" class="d-block w-100" alt="...">
+                        <img src="img/tupper-carro02.jpg" class="d-block w-100" alt="Portaviandas con divisiones y en diferentes colores">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="carousel-caption-content">
                                 <h5>Amplia gama de colores</h5>
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/tupper-carro03.jpg" class="d-block w-100" alt="...">
+                        <img src="img/tupper-carro03.jpg" class="d-block w-100" alt="Todo lo que se necesita para tu alacena">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="carousel-caption-content">
                                 <h5>Para tu alacena</h5>
